MDEV-19350 Server crashes in delete_tree_element / ... / Item_func_group_concat::repack_tree

Item_func_group_concat stores values in `tree`, which is often, but not
always the same as `&tree_base`.